<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
	<!ENTITY appname "Phone Saver">
	<!ENTITY author "Michael Standen">
	]>

<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="app_name">&appname;</string>

	<!-- Menu -->
	<string name="action_settings">Settings</string>
	<string name="action_support">Support the Developer</string>
	<string name="action_change_log">Change Log</string>
	<string name="action_credits">Credits</string>

	<!-- Folder list -->
	<string name="delete_button">Delete</string>
	<string name="back_folder">\u2191 Back</string>

	<string name="folder_list_empty_title">Welcome to Phone Saver!</string>
	<string name="folder_list_empty_body">Please add a save location with the button below.</string>

	<string name="location_select_label">* Select Location *</string>

	<!-- Folder select -->
	<string name="title_activity_folder_select">Select Folder</string>
	<string name="navigation_here">Here</string>
	<string name="navigation_read_only">Read Only</string>

	<!-- Saving messages -->
	<string name="toast_save_successful">Saved successfully.</string>
	<string name="toast_save_in_progress">Save in progress…</string>
	<string name="toast_save_failed">Save failed.</string>
	<string name="toast_save_init_error">Error loading save locations.</string>
	<string name="toast_save_init_no_locations">Please open the app to add save locations.</string>
	<string name="toast_save_file_exists_overwrite">Overwriting file already in this location…</string>
	<string name="toast_save_file_exists_fail">Cannot save, as file already exists.</string>
	<string name="toast_save_file_exists_self_abort">Aborting! It appears you are saving this file
		over itself.</string>
	<string name="toast_save_file_exists_self_continue">Note! It appears you are saving this file
		over itself. Continuing as allowed by save behaviour…</string>
	<string name="downloader_description">Saving %1$s</string>

	<!-- Debug / Error -->
	<string name="not_supported_content_type">Unsupported Content Type</string>
	<string name="not_supported" tools:keep="@string/not_supported">Please &lt;a href="%1$s">raise a feature request&lt;/a> with this
		content type so &author; can add official support. &lt;br/>&lt;br/>You can also enable the \"force saving\"
		setting to force &appname; to try to save it anyway.</string>

	<!-- Loading -->
	<string name="loading_title">Testing support…</string>
	<string name="loading_body">Please wait while I test for download support…</string>

	<!-- Credits -->
	<string name="credits_version">v%1$s</string>
	<string name="title_activity_credits">About &appname;</string>
	<string name="logo_description">Logo</string>
	<string name="credits_creator">by <a href="https://michael.standen.link">&author;</a></string>
	<string name="credits_content1">Phone Saver is a simple application for saving files to your
		phone through the share feature.
	</string>
	<string name="credits_content2">You can view the source code, log bugs, and request features on
		<a href="https://github.com/ScreamingHawk/phone-saver">Github</a>.
	</string>
	<string name="credits_content3">This application is completely open source; it is licensed under the
		<a href="https://tldrlegal.com/license/mit-license">MIT license</a>.
	</string>
	<string name="credits_content_translator">This translation of &appname; was provided by
		<a href="https://michael.standen.link">&author;</a>.
	</string>

	<!-- Settings -->
	<string name="title_activity_settings">Settings</string>

	<string name="pref_title_file_exists">Behaviour if file already exists</string>
	<array name="pref_list_title_file_exists">
		<item>Overwrite existing</item>
		<item>Do not save</item>
		<item>Append number to name</item>
		<!--<item>Request new name</item>-->
	</array>
	<array name="pref_list_description_file_exists">
		<item>Overwrite existing file with new file</item>
		<item>Do not save the new file</item>
		<item>Append number to file name so both files are saved</item>
		<!--<item>Request new file name with a pop up</item>-->
	</array>
	<string name="pref_default_value_file_exists">Overwrite</string>
	<array name="pref_list_values_file_exists">
		<item>Overwrite</item>
		<item>Nothing</item>
		<item>Postfix</item>
		<!--<item>Request</item>-->
	</array>

	<string name="pref_title_location_select">Enable location select</string>
	<string name="pref_description_location_select">Enable selection of location during saving using
		Android\'s built in document UI. This is the recommended strategy for saving to an external
		SD card.
	</string>
	<string name="pref_title_location_select_unavailable">UNAVAILABLE Enable location select</string>
	<string name="pref_description_location_select_unavailable">Enable selection of location during saving using
		Android\'s built in document UI. This is the recommended strategy for saving to an external
		SD card. NOTE: This feature is not available for your version of Android.
	</string>

	<string name="pref_title_register_file">Register with media scanner</string>
	<string name="pref_description_register_file">Notify the media scanner when a file has been
		downloaded. This will help ensure the file will be picked up by gallery and music applications.
	</string>

	<string name="pref_title_lenient_regex">Use lenient filename validation</string>
	<string name="pref_description_lenient_regex">When this setting is disabled, filenames are limited
		to alphanumeric characters, underscores and hyphens. When enabled, filenames are not restricted.
		This adds support for non-Latin characters and languages, emoji etc. WARNING: This may cause
		some files to not save, or may break applications that do not support these characters.
	</string>

	<string name="pref_title_follow_redirects">Follow redirects</string>
	<string name="pref_description_follow_redirects">When a link redirects to another page, &appname;
		will follow the redirect to the new page.
	</string>

	<string name="pref_title_force_saving">Force saving</string>
	<string name="pref_description_force_saving">Force a shared item to save even if it does not have
		explicit support. WARNING: Saving with this feature enabled may have adverse effects.
	</string>

	<string name="pref_title_special_imgur">Save Imgur images</string>
	<string name="pref_description_special_imgur">Save the first image when sharing an Imgur link.
	</string>

	<string name="pref_title_log_to_user">Show debug information</string>
	<array name="pref_list_title_log_to_user">
		<item>None</item>
		<item>Error</item>
		<item>Warn</item>
		<item>Info</item>
		<item>Debug</item>
		<item>Verbose</item>
	</array>
	<array name="pref_list_description_log_to_user">
		<item>Do not show debug information</item>
		<item>Show debug information at error level</item>
		<item>Show debug information at warn level and above</item>
		<item>Show debug information at info level and above</item>
		<item>Show debug information at debug level and above</item>
		<item>Show debug information at verbose level and above</item>
	</array>
	<string name="pref_default_value_log_to_user">None</string>
	<array name="pref_list_values_log_to_user">
		<item>None</item>
		<item>Error</item>
		<item>Warn</item>
		<item>Info</item>
		<item>Debug</item>
		<item>Verbose</item>
	</array>

	<string name="pref_title_hide_support">Hide support pop up</string>
	<string name="pref_description_hide_support">Don\'t show the "support the developer" pop up.
	</string>

	<!-- Change log -->
	<string name="changelog_full_title">Change Log</string>
	<string name="changelog_title">What\'s New</string>
	<string name="changelog_ok_button">OK</string>
	<string name="changelog_show_full">Show all&#8230;</string>

	<!-- Support Dialog -->
	<string name="support_header">Thank You!</string>
	<string name="support_body1">As &appname; has grown and evolved, I\'ve realised that I\'m only
		interested in saving images, and so I\'ve released a new app that focuses exclusively
		on images.
	</string>
	<string name="support_body2">If this is of interest to you, or you wish to support &author; and
		future development, please consider purchasing the new app.
	</string>
	<string name="support_link">
		<a href="https://play.google.com/store/apps/details?id=link.standen.michael.imagesaver">
			Image Saver on Google Play
		</a>
	</string>
	<string name="support_footer">This message can be turned off in the settings.</string>

</resources>
