<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<ListPreference
		android:defaultValue="@string/pref_default_value_file_exists"
		android:entries="@array/pref_list_title_file_exists"
		android:entryValues="@array/pref_list_values_file_exists"
		android:key="file_exists"
		android:negativeButtonText="@null"
		android:positiveButtonText="@null"
		android:title="@string/pref_title_file_exists" />

	<SwitchPreference
		android:defaultValue="false"
		android:key="register_file"
		android:summary="@string/pref_description_register_file"
		android:title="@string/pref_title_register_file"/>

	<SwitchPreference
		android:defaultValue="false"
		android:key="lenient_regex"
		android:summary="@string/pref_description_lenient_regex"
		android:title="@string/pref_title_lenient_regex"/>

	<SwitchPreference
		android:defaultValue="false"
		android:key="force_saving"
		android:summary="@string/pref_description_force_saving"
		android:title="@string/pref_title_force_saving"/>

</PreferenceScreen>
