<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="link.standen.michael.phonesaver.FolderListActivity">
	<item
		android:id="@+id/action_settings"
		android:orderInCategory="100"
		android:title="@string/action_settings"
		app:showAsAction="never" />
	<item
		android:id="@+id/action_support"
		android:orderInCategory="125"
		android:title="@string/action_support"
		app:showAsAction="never" />
	<item
		android:id="@+id/action_change_log"
		android:orderInCategory="150"
		android:title="@string/action_change_log"
		app:showAsAction="never" />
	<item
		android:id="@+id/action_credits"
		android:orderInCategory="200"
		android:title="@string/action_credits"
		app:showAsAction="never" />
</menu>
