<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/dialog_margin"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAlignment="center"
				android:paddingTop="@dimen/dialog_padding"
				android:text="@string/support_header"
				android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAlignment="center"
				android:padding="@dimen/dialog_padding"
				android:text="@string/support_body1"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAlignment="center"
				android:padding="@dimen/dialog_padding"
				android:text="@string/support_body2"/>

			<TextView
				android:id="@+id/support_link"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAlignment="center"
				android:padding="@dimen/dialog_padding"
				android:text="@string/support_link"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAlignment="center"
				android:padding="@dimen/dialog_padding"
				android:text="@string/support_footer"/>

		</LinearLayout>
</ScrollView>
