<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="link.standen.michael.phonesaver.activity.CreditsActivity">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:orientation="vertical"
			tools:context="link.standen.michael.slideshow.CreditsActivity">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@mipmap/ic_launcher"
				android:layout_gravity="center_horizontal"
				android:contentDescription="@string/logo_description"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAlignment="center"
				android:paddingTop="@dimen/credits_padding"
				android:text="@string/app_name"
				android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

			<TextView
				android:id="@+id/credits_version"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAlignment="center"
				android:paddingBottom="@dimen/credits_padding"/>

			<TextView
				android:id="@+id/credits_creator"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAlignment="center"
				android:padding="@dimen/credits_padding"
				android:text="@string/credits_creator"/>

			<TextView
				android:id="@+id/credits_content1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/credits_padding"
				android:text="@string/credits_content1"/>

			<TextView
				android:id="@+id/credits_content2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/credits_padding"
				android:text="@string/credits_content2"/>

			<TextView
				android:id="@+id/credits_content3"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/credits_padding"
				android:text="@string/credits_content3"/>

			<TextView
				android:id="@+id/credits_content_translator"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/credits_padding"
				android:text="@string/credits_content_translator"/>

		</LinearLayout>
</ScrollView>
