<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
											 xmlns:app="http://schemas.android.com/apk/res-auto"
											 xmlns:tools="http://schemas.android.com/tools"
											 android:layout_width="match_parent"
											 android:layout_height="match_parent"
											 tools:context="link.standen.michael.phonesaver.activity.SaverActivity">

	<ListView
		android:id="@android:id/list"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_marginTop="@dimen/activity_vertical_margin"
		app:layout_constraintTop_toTopOf="parent"/>

	<LinearLayout
		android:id="@+id/not_supported_wrapper"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="@dimen/activity_horizontal_margin"
		android:orientation="vertical"
		android:visibility="gone">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/not_supported_content_type"
			android:textAlignment="center"
			android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

		<TextView
			android:id="@+id/not_supported"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textAlignment="center"
			android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/loading"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="@dimen/activity_horizontal_margin"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/loading_title"
			android:textAlignment="center"
			android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/loading_body"
			android:textAlignment="center"
			android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
	</LinearLayout>

</android.support.constraint.ConstraintLayout>
